docs/eventing/samples/apache-rocketmq-source/config/600-istioegress.yaml
#
#    Licensed to the Apache Software Foundation (ASF) under one or more
#    contributor license agreements.  See the NOTICE file distributed with
#    this work for additional information regarding copyright ownership.
#    The ASF licenses this file to You under the Apache License, Version 2.0
#   (the "License"); you may not use this file except in compliance with
#    the License.  You may obtain a copy of the License at

#    http://www.apache.org/licenses/LICENSE-2.0

#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS,
#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#    See the License for the specific language governing permissions and
#    limitations under the License.
#

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: rocketmq-ext
spec:
  hosts:
  - "*.rocketmq.com"
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  - number: 9876
    name: tcp-namesrv
    protocol: TCP
  - number: 10911
    name: tcp-broker
    protocol: TCP
